depsgraph: crash in IDDepsNode::tag_update #45423

Closed
opened 2015-07-14 10:40:33 +02:00 by Sybren A. Stüvel · 4 comments

System Information
Kubuntu 15.04

Blender Version
Broken: 2.75.2 7ad9ca72dd self-built

Short description of error
This code crashes Blender:

from bpy import context

context.object.animation_data_clear()
context.object.update_tag({'DATA', 'OBJECT', 'TIME'})

Exact steps for others to reproduce the error

  1. Open manual_walkcycle_crashes.blend
  2. Press the "Run Script" button in the Text Editor.
  3. See crash.

It is important for this bug to manifest itself that the object has animation data. In this example the object doesn't have an action directly, but it does have an Action Stash NLA strip with an action. Both when using a direct action or a stashed action, this code crashes Blender.

/home/sybren/workspace/blender-git/blender/blender-debug(BLI_system_backtrace+0x35) [0x2b61dcb]
/home/sybren/workspace/blender-git/blender/blender-debug(_ZN10IDDepsNode10tag_updateEP9Depsgraph+0xb1) [0x2b727b1]
/home/sybren/workspace/blender-git/blender/blender-debug(DEG_graph_id_tag_update+0x63) [0x2b96527]
/home/sybren/workspace/blender-git/blender/blender-debug(DEG_id_tag_update_ex+0x151) [0x2b9681c]
/home/sybren/workspace/blender-git/blender/blender-debug(DAG_id_tag_update_ex+0x39) [0x2684ba8]
/home/sybren/workspace/blender-git/blender/blender-debug(DAG_id_tag_update+0x2f) [0x2684e69]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x28c012b]
/home/sybren/workspace/blender-git/blender/blender-debug(ID_update_tag_call+0x4e) [0x28c2004]
/home/sybren/workspace/blender-git/blender/blender-debug(RNA_function_call+0x43) [0x28bca58]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x20ecf28]
/usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyObject_Call+0x68) [0x7fe1c0c2b138]
/usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyEval_EvalFrameEx+0x4a20) [0x7fe1c0c23100]
/usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyEval_EvalCodeEx+0x883) [0x7fe1c0c26cf3]
/usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyEval_EvalCode+0x1b) [0x7fe1c0c26d9b]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x20dfc4b]
/home/sybren/workspace/blender-git/blender/blender-debug(BPY_text_exec+0x39) [0x20dfff4]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x1ab9c71]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x1ab9d46]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x19b5236]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x19b581b]
/home/sybren/workspace/blender-git/blender/blender-debug(WM_operator_name_call_ptr+0xa5) [0x19b5a0b]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x1d08b2d]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x1d23046]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x19b365a]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x19b7381]
/home/sybren/workspace/blender-git/blender/blender-debug() [0x19b761d]
/home/sybren/workspace/blender-git/blender/blender-debug(wm_event_do_handlers+0x4b6) [0x19b81e9]
/home/sybren/workspace/blender-git/blender/blender-debug(WM_main+0x24) [0x19ab493]
/home/sybren/workspace/blender-git/blender/blender-debug(main+0x49a) [0x19aa5a5]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7fe1bc814a40]
/home/sybren/workspace/blender-git/blender/blender-debug(_start+0x29) [0x19a6af9]
BLI_assert failed: /home/sybren/workspace/blender-git/blender/source/blender/depsgraph/intern/depsnode.cc:253, tag_update(), at 'adt != __null'
Writing: /tmp/manual_walkcycle_crashes.crash.txt
/home/sybren/bin/blender-debug: line 22: 18860 Segmentation fault      $BLENDER "$@"
**System Information** Kubuntu 15.04 **Blender Version** Broken: 2.75.2 7ad9ca72ddc789479e92fa4dc898740642eb04da self-built **Short description of error** This code crashes Blender: ``` from bpy import context context.object.animation_data_clear() context.object.update_tag({'DATA', 'OBJECT', 'TIME'}) ``` **Exact steps for others to reproduce the error** 1. Open [manual_walkcycle_crashes.blend](https://archive.blender.org/developer/F206846/manual_walkcycle_crashes.blend) 2. Press the "Run Script" button in the Text Editor. 3. See crash. It is important for this bug to manifest itself that the object has animation data. In this example the object doesn't have an action directly, but it does have an Action Stash NLA strip with an action. Both when using a direct action or a stashed action, this code crashes Blender. ``` /home/sybren/workspace/blender-git/blender/blender-debug(BLI_system_backtrace+0x35) [0x2b61dcb] /home/sybren/workspace/blender-git/blender/blender-debug(_ZN10IDDepsNode10tag_updateEP9Depsgraph+0xb1) [0x2b727b1] /home/sybren/workspace/blender-git/blender/blender-debug(DEG_graph_id_tag_update+0x63) [0x2b96527] /home/sybren/workspace/blender-git/blender/blender-debug(DEG_id_tag_update_ex+0x151) [0x2b9681c] /home/sybren/workspace/blender-git/blender/blender-debug(DAG_id_tag_update_ex+0x39) [0x2684ba8] /home/sybren/workspace/blender-git/blender/blender-debug(DAG_id_tag_update+0x2f) [0x2684e69] /home/sybren/workspace/blender-git/blender/blender-debug() [0x28c012b] /home/sybren/workspace/blender-git/blender/blender-debug(ID_update_tag_call+0x4e) [0x28c2004] /home/sybren/workspace/blender-git/blender/blender-debug(RNA_function_call+0x43) [0x28bca58] /home/sybren/workspace/blender-git/blender/blender-debug() [0x20ecf28] /usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyObject_Call+0x68) [0x7fe1c0c2b138] /usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyEval_EvalFrameEx+0x4a20) [0x7fe1c0c23100] /usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyEval_EvalCodeEx+0x883) [0x7fe1c0c26cf3] /usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyEval_EvalCode+0x1b) [0x7fe1c0c26d9b] /home/sybren/workspace/blender-git/blender/blender-debug() [0x20dfc4b] /home/sybren/workspace/blender-git/blender/blender-debug(BPY_text_exec+0x39) [0x20dfff4] /home/sybren/workspace/blender-git/blender/blender-debug() [0x1ab9c71] /home/sybren/workspace/blender-git/blender/blender-debug() [0x1ab9d46] /home/sybren/workspace/blender-git/blender/blender-debug() [0x19b5236] /home/sybren/workspace/blender-git/blender/blender-debug() [0x19b581b] /home/sybren/workspace/blender-git/blender/blender-debug(WM_operator_name_call_ptr+0xa5) [0x19b5a0b] /home/sybren/workspace/blender-git/blender/blender-debug() [0x1d08b2d] /home/sybren/workspace/blender-git/blender/blender-debug() [0x1d23046] /home/sybren/workspace/blender-git/blender/blender-debug() [0x19b365a] /home/sybren/workspace/blender-git/blender/blender-debug() [0x19b7381] /home/sybren/workspace/blender-git/blender/blender-debug() [0x19b761d] /home/sybren/workspace/blender-git/blender/blender-debug(wm_event_do_handlers+0x4b6) [0x19b81e9] /home/sybren/workspace/blender-git/blender/blender-debug(WM_main+0x24) [0x19ab493] /home/sybren/workspace/blender-git/blender/blender-debug(main+0x49a) [0x19aa5a5] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7fe1bc814a40] /home/sybren/workspace/blender-git/blender/blender-debug(_start+0x29) [0x19a6af9] BLI_assert failed: /home/sybren/workspace/blender-git/blender/source/blender/depsgraph/intern/depsnode.cc:253, tag_update(), at 'adt != __null' Writing: /tmp/manual_walkcycle_crashes.crash.txt /home/sybren/bin/blender-debug: line 22: 18860 Segmentation fault $BLENDER "$@" ```
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Sybren A. Stüvel 2015-07-14 10:40:33 +02:00
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This issue was referenced by 82740cd282

This issue was referenced by 82740cd282636fe318c3e4c7c3b1c2033857350d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45423
No description provided.